fixed same image selected twice not showing + width

--- a/styles/components/_message.scss
+++ b/styles/components/_message.scss
@@ -20,12 +20,12 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      max-width: 550px;
 
       .chatbox__message__image {
         cursor: pointer;
         border-radius: 10px;
-        object-fit: cover;
+        object-fit: contain;
+        max-width: 450px;
       }
 
       .chatbox__message__sent {
